--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="\images\apple-touch-icon.png" />
     
     <link rel="manifest" href="\manifest.json"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
     
     <title>NewsPerk - Get daily news for free!</title>
   </head>
